Fixed Spacing

--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,7 @@ a4{
   max-width: 1400px;
   margin: 0 auto;
   text-align: center;
+  margin-bottom: 6rem;
 }
 
 @keyframes weightGrow {
